refactor: invoke impl

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "next-invoke",
+  "name": "@jswork/next-invoke",
   "version": "1.0.0",
-  "description": "Invoke a method with context",
-  "homepage": "https://github.com/afeiship/next-invoke",
+  "description": "Invoke a method with context.",
+  "homepage": "https://js.work",
   "author": {
     "name": "afei",
     "email": "1290657123@qq.com"
@@ -10,24 +10,38 @@
   "scripts": {
     "build": "gulp",
     "test": "jest",
-    "version": "gulp bump"
+    "start": "node ./express.js",
+    "release": "release-it"
   },
-  "main": "dist/next-invoke.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "license": "MIT",
   "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-bump": "^2.7.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-size": "^2.1.0",
-    "gulp-uglify": "^2.1.2",
-    "jest": "^23.6.0",
-    "yargs": "^4.7.1",
-    "prettier": "^1.14.3"
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@jswork/gulp-pkg-header": "^1.0.8",
+    "@jswork/gulp-registry": "^1.0.22",
+    "@jswork/next": "^1.1.8",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-prettier": "^4.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
+    "gulp-uglify": "^3.0.2",
+    "jest": "^29.5.0",
+    "jest-location-mock": "^1.0.9",
+    "uglify-save-license": "^0.4.1"
   },
-  "dependencies": {
-    "next-js-core2": "github:afeiship/next-js-core2"
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
