--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/next-invoke",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Invoke a method with context.",
   "homepage": "https://js.work",
   "author": {
@@ -43,5 +43,9 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "next",
+    "invoke"
+  ]
 }
